<?xml version="1.0" encoding="UTF-8"?>
<!--
 * Copyright (c) 2020 Intel Corporation
 *
 * SPDX-License-Identifier: GPL-3.0-or-later
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>Application</artifactId>
        <groupId>com.intel.missioncontrol</groupId>
        <version>0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>flightplanning</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>4.12</junit.version>
        <jme3_g>org.jmonkeyengine</jme3_g>
        <jme3_v>3.2.0-stable</jme3_v>
    </properties>


    <dependencies>
        <!-- https://mvnrepository.com/artifact/com.github.ajalt/clikt -->
        <dependency>
            <groupId>com.github.ajalt</groupId>
            <artifactId>clikt</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>${jme3_g}</groupId>
            <artifactId>jme3-core</artifactId>
            <version>${jme3_v}</version>
        </dependency>
        <dependency>
            <groupId>${jme3_g}</groupId>
            <artifactId>jme3-desktop</artifactId>
            <version>${jme3_v}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>${jme3_g}</groupId>
            <artifactId>jme3-lwjgl</artifactId>
            <version>${jme3_v}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.3.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.locationtech.jts/jts-core -->
    </dependencies>

    <repositories>
        <repository>
            <id>local-repository</id>
            <url>file://${project.basedir}/../maven-local-repository</url>
        </repository>
        <repository>
            <id>jcenter</id>
            <url>http://jcenter.bintray.com</url>
        </repository>
    </repositories>



    <build>
        <sourceDirectory>src</sourceDirectory>
        <resources>
            <resource>
                <directory>${project.basedir}/src</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>

                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.prism=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>

            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>com.acme.coyote</pattern>
                                    <shadedPattern>hidden.coyote</shadedPattern>
                                </relocation>
                            </relocations>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.apache.logging.log4j:log4j-api</exclude>
                                    <exclude>org.apache.logging.log4j:log4j-core</exclude>

                                    <exclude>org.slf4j:slf4j-log4j12:*</exclude>
                                </excludes>
                            </artifactSet>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.intel.flightplanning.Test</mainClass>
                                </transformer>
                            </transformers>

                        </configuration>
                    </execution>
                </executions>
            </plugin>



        </plugins>
    </build>


</project>